--- a/src/AdminBundle/Resources/views/base.html.twig
+++ b/src/AdminBundle/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="{{ asset('assets/img/favicon.ico') }}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Paper Dashboard by Creative Tim</title>
+    <title>{% block title %} {% endblock %}</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -41,18 +41,46 @@
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="http://www.creative-tim.com" class="simple-text">
-                    Creative Tim
+                    Shout
                 </a>
             </div>
 
             <ul class="nav">
-                <li class="active">
-                    <a href="dashboard.html">
+                <li class= "active">
+                    <a href="{{path('admin_index')}}">
                         <i class="ti-pie-chart"></i>
                         <p>Dashboard</p>
+
                     </a>
                 </li>
+                <li>
+                    <a href="{{path('admin_user')}}">
+                        <i class="ti-user"></i>
+                        <p>Users Management</p>
 
+                    </a>
+                </li>
+                <li>
+                    <a href="shouts.html">
+                        <i class="ti-announcement"></i>
+                        <p>Shouts</p>
+
+                    </a>
+                </li>
+                  <li>
+                    <a href="quotes.html">
+                        <i class="ti-thought"></i>
+                        <p>Quote of the Day</p>
+
+                    </a>
+                </li>
+                <li>
+                    <a href="reports.html">
+                        <i class="ti-wallet"></i>
+                        <p>Reports</p>
+
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
@@ -107,21 +135,58 @@
 
         <div class="content">
             <div class="container-fluid">
-                <div class="row">
+                {% block content %} {% endblock %}
+                <!-- <div class="row">
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="card">
+                            <div class="content">
+                                <div class="row">
+                                    <div class="col-xs-5">
+                                        <div class="icon-big icon-warning text-center">
+                                            <i class="ti-server"></i>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-7">
+                                        <div class="numbers">
+                                            <p>Users</p>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="footer">
+                                    <hr />
+                                    <div class="stats">
+                                        <i class="ti-reload"></i> Updated now
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                </div>
+
+                </div> -->
             </div>
         </div>
 
 
-        <footer class="footer">
+       <footer class="footer">
             <div class="container-fluid">
                 <nav class="pull-left">
                     <ul>
 
                         <li>
-                            <a href="#">
-                                Home
+                            <a href="http://www.creative-tim.com">
+                                Creative Tim
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://blog.creative-tim.com">
+                               Blog
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.creative-tim.com/license">
+                                Licenses
                             </a>
                         </li>
                     </ul>
@@ -131,6 +196,8 @@
                 </div>
             </div>
         </footer>
+
+
 
     </div>
 </div>
