--- a/app/Resources/views/profile/_reviews.html.twig
+++ b/app/Resources/views/profile/_reviews.html.twig
@@ -1,4 +1,10 @@
+{# USER REVIEW FORM #}
+{% form_theme form 'bootstrap_3_layout.html.twig' %}
+{{ form_start(form) }}
+{{ form_widget(form) }}
 <div class="text-center"><button class="btn btn-warning btn-round"><i class="fa fa-plus"></i> Review</button></div>
+{{ form_end(form) }}
+
 <ul class="list-unstyled follows">
     {% for review in reviews %}
         <li>
@@ -9,14 +15,43 @@
                 <div class="col-md-7 col-xs-4">
                     <h6>{{ review.reviewedBy.username }}<br/><small>{{ review.review }}</small></h6>
                 </div>
-                {#<div class="col-md-3 col-xs-2">#}
-                {#<div class="unfollow" >#}
-                {#<div class="checkbox">#}
-                {#<input id="checkbox1" type="checkbox" checked="">#}
-                {#<label for="checkbox1"></label>#}
-                {#</div>#}
-                {#</div>#}
-                {#</div>#}
+
+                {% if review.reviewedBy.id == app.user.id %}
+                    <div class="col-md-3 col-xs-2">
+                        <div class="unfollow">
+                            <a class="btn btn-primary btn-sm" data-toggle="modal" href="#delete-review-{{ review.id }}"><i class="fa fa-times"></i> Remove</a>
+                            <div class="modal fade" id="delete-review-{{ review.id }}">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close mt-0" data-dismiss="modal" aria-hidden="true">
+                                                &times;
+                                            </button>
+                                            <h4 class="modal-title mt-0 mb-0">Confirm</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            Are you sure you want to delete this review?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default mr-0" data-dismiss="modal">No
+                                            </button>
+                                            <form action="{{ path('review_delete', {'id': review.id}) }}" method="post" role="form">
+                                                <input type="text" name="username" value="{{ user.username }}" hidden>
+                                                <input type="text" name="_token" value="{{ csrf_token('deleteReview') }}" hidden>
+                                                <button type="submit" class="btn btn-primary m-2">Yes</button>
+                                            </form>
+                                        </div>
+                                    </div><!-- /.modal-content -->
+                                </div><!-- /.modal-dialog -->
+                            </div><!-- /.modal -->
+                            {#<div class="checkbox">#}
+                            {#<input id="checkbox1" type="checkbox" checked="">#}
+                            {#<label for="checkbox1"></label>#}
+                            {#</div>#}
+                        </div>
+                    </div>
+                {% endif %}
+
             </div>
         </li>
         <hr />
