--- a/app/Resources/views/layouts/navbar.html.twig
+++ b/app/Resources/views/layouts/navbar.html.twig
@@ -51,9 +51,11 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.username }}</a>
                     <ul class="dropdown-menu dropdown-menu-right dropdown-danger">
                         <li class="dropdown-header">Account</li>
-                        <li class="dropdown-item"><a href="{{ path('my_profile_show') }}"><i class="fa fa-user"></i> Profile</a></li>
+                        <li class="dropdown-item"><a href="{{ path('profile_me') }}"><i class="fa fa-user"></i>My Profile</a></li>
                         {#<li class="dropdown-item"><a href="#pk"><i class="fa fa-cog"></i> Settings</a></li>#}
-                        <li class="dropdown-item"><a href="{{ path('user_change_password') }}"><i class="fa fa-asterisk"></i> Password</a></li>
+                        <li class="dropdown-header"> Settings</li>
+                        <li class="dropdown-item"><a href="{{ path('my_profile_show') }}"><i class="fa fa-edit"></i>Update Profile</a></li>
+                        <li class="dropdown-item"><a href="{{ path('user_change_password') }}"><i class="fa fa-asterisk"></i>Update Password</a></li>
                         {#<li class="dropdown-item"><a href="#pk">Change Password</a></li>#}
                         {#<div class="dropdown-divider"></div>#}
                         {#<li class="dropdown-item"><a href="#pk"></a></li>#}
