--- a/app/Resources/views/profile/show.html.twig
+++ b/app/Resources/views/profile/show.html.twig
@@ -9,7 +9,7 @@
             <div class="container">
                 <div class="owner">
                     <div class="avatar">
-                        <img src="{{ asset('assets/img/') }}{{ user.avatar }}" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                        <img src="/{{ user.avatar }}" alt="Circle Image" class="img-circle img-no-padding img-responsive">
                     </div>
                     <div class="name">
                         <h4 class="title">{{ user.username }}<br/></h4>
@@ -21,7 +21,7 @@
                         {% if user.about is empty  %}
                             <p>No Description.</p>
                         {% else %}
-                            <p>{{ user.about }}</p>
+                            <p>{{ user.about|md2html }}</p>
                         {% endif %}
                         <br />
                         {% if me %}
