--- a/app/Resources/views/security/change_pass.html.twig
+++ b/app/Resources/views/security/change_pass.html.twig
@@ -4,6 +4,7 @@
     <div class="row">
         <div class="col-md-6 offset-3 mt-5 mb-5">
             <legend>Change Password</legend>
+            <div class='uil-reload-css' style=''><div></div></div>
             {% form_theme form 'bootstrap_3_layout.html.twig' %}
             {{ form_start(form) }}
             {{ form_widget(form) }}
